# wind-vision

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  mlops_ci.yml
docs/: ARCHITECTURE.md
k8s/: deployment.yaml
src/wind_vision/: cli.py
src/wind_vision/api/: server.py
src/wind_vision/cloud/: s3_sync.py
src/wind_vision/core/: config.py  logger.py
src/wind_vision/models/: dataset.py  evaluate.py  explain.py  predict.py  train.py
terraform/: main.tf
tests/: test_extract_wind.py
